Mylang/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.5 from Mylang/Par.y
-----------------------------------------------------------------------------

state 94 contains 1 shift/reduce conflicts.

rule 17 is unused

terminal L_MyString is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pVariable -> Variable                       (1)
	%start_pAssignOp -> AssignOp                       (2)
	%start_pType -> Type                               (3)
	%start_pStandardType -> StandardType               (4)
	%start_pStatement -> Statement                     (5)
	%start_pExpression -> Expression                   (6)
	%start_pTerm -> Term                               (7)
	%start_pFactor -> Factor                           (8)
	%start_pProcedureStatement -> ProcedureStatement   (9)
	%start_pExpressionList -> ExpressionList           (10)
	%start_pCompoundStatement -> CompoundStatement     (11)
	%start_pStatementList -> StatementList             (12)
	%start_pReadStatement -> ReadStatement             (13)
	%start_pWriteStatement -> WriteStatement           (14)
	Id -> L_Id                                         (15)
	MyInteger -> L_MyInteger                           (16)
	MyString -> L_MyString                             (17)
	Program -> 'program' Id CompoundStatement          (18)
	Variable -> Id                                     (19)
	AssignOp -> '='                                    (20)
	Type -> StandardType                               (21)
	Type -> 'array' '[' MyInteger ']'                  (22)
	StandardType -> 'integer'                          (23)
	Statement -> Variable AssignOp Expression          (24)
	Statement -> ProcedureStatement                    (25)
	Statement -> CompoundStatement                     (26)
	Statement -> 'if' Expression 'then' Statement 'else' Statement   (27)
	Statement -> 'if' Expression 'then' Statement      (28)
	Statement -> 'while' Expression 'do' Statement     (29)
	Statement -> ReadStatement                         (30)
	Statement -> WriteStatement                        (31)
	Expression -> Expression '+' Term                  (32)
	Expression -> Expression '-' Term                  (33)
	Expression -> Term                                 (34)
	Term -> Term '*' Factor                            (35)
	Term -> Term '/' Factor                            (36)
	Term -> Factor                                     (37)
	Factor -> MyInteger                                (38)
	Factor -> Variable                                 (39)
	Factor -> '(' Expression ')'                       (40)
	ProcedureStatement -> Id '(' ')'                   (41)
	ProcedureStatement -> Id '(' ExpressionList ')'    (42)
	ExpressionList -> Expression                       (43)
	ExpressionList -> Expression ',' ExpressionList    (44)
	CompoundStatement -> 'begin' StatementList 'end'   (45)
	StatementList -> Statement                         (46)
	StatementList -> Statement ';' StatementList       (47)
	ReadStatement -> 'read' '(' Variable ')'           (48)
	WriteStatement -> 'write' '(' Expression ')'       (49)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'*'            { PT _ (TS _ 3) }
	'+'            { PT _ (TS _ 4) }
	','            { PT _ (TS _ 5) }
	'-'            { PT _ (TS _ 6) }
	'/'            { PT _ (TS _ 7) }
	';'            { PT _ (TS _ 8) }
	'='            { PT _ (TS _ 9) }
	'['            { PT _ (TS _ 10) }
	']'            { PT _ (TS _ 11) }
	'array'        { PT _ (TS _ 12) }
	'begin'        { PT _ (TS _ 13) }
	'do'           { PT _ (TS _ 14) }
	'else'         { PT _ (TS _ 15) }
	'end'          { PT _ (TS _ 16) }
	'if'           { PT _ (TS _ 17) }
	'integer'      { PT _ (TS _ 18) }
	'program'      { PT _ (TS _ 19) }
	'read'         { PT _ (TS _ 20) }
	'then'         { PT _ (TS _ 21) }
	'while'        { PT _ (TS _ 22) }
	'write'        { PT _ (TS _ 23) }
	L_Id           { PT _ (T_Id $$) }
	L_MyInteger    { PT _ (T_MyInteger $$) }
	L_MyString     { PT _ (T_MyString $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pVariable rule  1
	%start_pAssignOp rule  2
	%start_pType    rule  3
	%start_pStandardType rule  4
	%start_pStatement rule  5
	%start_pExpression rule  6
	%start_pTerm    rule  7
	%start_pFactor  rule  8
	%start_pProcedureStatement rule  9
	%start_pExpressionList rule  10
	%start_pCompoundStatement rule  11
	%start_pStatementList rule  12
	%start_pReadStatement rule  13
	%start_pWriteStatement rule  14
	Id              rule  15
	MyInteger       rule  16
	MyString        rule  17
	Program         rule  18
	Variable        rule  19
	AssignOp        rule  20
	Type            rules 21, 22
	StandardType    rule  23
	Statement       rules 24, 25, 26, 27, 28, 29, 30, 31
	Expression      rules 32, 33, 34
	Term            rules 35, 36, 37
	Factor          rules 38, 39, 40
	ProcedureStatement rules 41, 42
	ExpressionList  rules 43, 44
	CompoundStatement rule  45
	StatementList   rules 46, 47
	ReadStatement   rule  48
	WriteStatement  rule  49

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'program'      shift, and enter state 57

	Program        goto state 56

State 1

	%start_pVariable -> . Variable                      (rule 1)

	L_Id           shift, and enter state 16

	Id             goto state 33
	Variable       goto state 55

State 2

	%start_pAssignOp -> . AssignOp                      (rule 2)

	'='            shift, and enter state 54

	AssignOp       goto state 53

State 3

	%start_pType -> . Type                              (rule 3)

	'array'        shift, and enter state 52
	'integer'      shift, and enter state 49

	Type           goto state 50
	StandardType   goto state 51

State 4

	%start_pStandardType -> . StandardType              (rule 4)

	'integer'      shift, and enter state 49

	StandardType   goto state 48

State 5

	%start_pStatement -> . Statement                    (rule 5)

	'begin'        shift, and enter state 29
	'if'           shift, and enter state 30
	'read'         shift, and enter state 20
	'while'        shift, and enter state 31
	'write'        shift, and enter state 18
	L_Id           shift, and enter state 16

	Id             goto state 21
	Variable       goto state 22
	Statement      goto state 47
	ProcedureStatementgoto state 24
	CompoundStatementgoto state 25
	ReadStatement  goto state 27
	WriteStatement goto state 28

State 6

	%start_pExpression -> . Expression                  (rule 6)

	'('            shift, and enter state 40
	L_Id           shift, and enter state 16
	L_MyInteger    shift, and enter state 41

	Id             goto state 33
	MyInteger      goto state 34
	Variable       goto state 35
	Expression     goto state 46
	Term           goto state 37
	Factor         goto state 38

State 7

	%start_pTerm -> . Term                              (rule 7)

	'('            shift, and enter state 40
	L_Id           shift, and enter state 16
	L_MyInteger    shift, and enter state 41

	Id             goto state 33
	MyInteger      goto state 34
	Variable       goto state 35
	Term           goto state 45
	Factor         goto state 38

State 8

	%start_pFactor -> . Factor                          (rule 8)

	'('            shift, and enter state 40
	L_Id           shift, and enter state 16
	L_MyInteger    shift, and enter state 41

	Id             goto state 33
	MyInteger      goto state 34
	Variable       goto state 35
	Factor         goto state 44

State 9

	%start_pProcedureStatement -> . ProcedureStatement    (rule 9)

	L_Id           shift, and enter state 16

	Id             goto state 42
	ProcedureStatementgoto state 43

State 10

	%start_pExpressionList -> . ExpressionList          (rule 10)

	'('            shift, and enter state 40
	L_Id           shift, and enter state 16
	L_MyInteger    shift, and enter state 41

	Id             goto state 33
	MyInteger      goto state 34
	Variable       goto state 35
	Expression     goto state 36
	Term           goto state 37
	Factor         goto state 38
	ExpressionList goto state 39

State 11

	%start_pCompoundStatement -> . CompoundStatement    (rule 11)

	'begin'        shift, and enter state 29

	CompoundStatementgoto state 32

State 12

	%start_pStatementList -> . StatementList            (rule 12)

	'begin'        shift, and enter state 29
	'if'           shift, and enter state 30
	'read'         shift, and enter state 20
	'while'        shift, and enter state 31
	'write'        shift, and enter state 18
	L_Id           shift, and enter state 16

	Id             goto state 21
	Variable       goto state 22
	Statement      goto state 23
	ProcedureStatementgoto state 24
	CompoundStatementgoto state 25
	StatementList  goto state 26
	ReadStatement  goto state 27
	WriteStatement goto state 28

State 13

	%start_pReadStatement -> . ReadStatement            (rule 13)

	'read'         shift, and enter state 20

	ReadStatement  goto state 19

State 14

	%start_pWriteStatement -> . WriteStatement          (rule 14)

	'write'        shift, and enter state 18

	WriteStatement goto state 17

State 15

	Id -> . L_Id                                        (rule 15)

	L_Id           shift, and enter state 16


State 16

	Id -> L_Id .                                        (rule 15)

	'('            reduce using rule 15
	')'            reduce using rule 15
	'*'            reduce using rule 15
	'+'            reduce using rule 15
	','            reduce using rule 15
	'-'            reduce using rule 15
	'/'            reduce using rule 15
	';'            reduce using rule 15
	'='            reduce using rule 15
	'begin'        reduce using rule 15
	'do'           reduce using rule 15
	'else'         reduce using rule 15
	'end'          reduce using rule 15
	'then'         reduce using rule 15
	%eof           reduce using rule 15


State 17

	%start_pWriteStatement -> WriteStatement .          (rule 14)

	%eof           accept


State 18

	WriteStatement -> 'write' . '(' Expression ')'      (rule 49)

	'('            shift, and enter state 73


State 19

	%start_pReadStatement -> ReadStatement .            (rule 13)

	%eof           accept


State 20

	ReadStatement -> 'read' . '(' Variable ')'          (rule 48)

	'('            shift, and enter state 72


State 21

	Variable -> Id .                                    (rule 19)
	ProcedureStatement -> Id . '(' ')'                  (rule 41)
	ProcedureStatement -> Id . '(' ExpressionList ')'    (rule 42)

	'('            shift, and enter state 64
	'='            reduce using rule 19


State 22

	Statement -> Variable . AssignOp Expression         (rule 24)

	'='            shift, and enter state 54

	AssignOp       goto state 71

State 23

	StatementList -> Statement .                        (rule 46)
	StatementList -> Statement . ';' StatementList      (rule 47)

	';'            shift, and enter state 70
	'end'          reduce using rule 46
	%eof           reduce using rule 46


State 24

	Statement -> ProcedureStatement .                   (rule 25)

	';'            reduce using rule 25
	'else'         reduce using rule 25
	'end'          reduce using rule 25
	%eof           reduce using rule 25


State 25

	Statement -> CompoundStatement .                    (rule 26)

	';'            reduce using rule 26
	'else'         reduce using rule 26
	'end'          reduce using rule 26
	%eof           reduce using rule 26


State 26

	%start_pStatementList -> StatementList .            (rule 12)

	%eof           accept


State 27

	Statement -> ReadStatement .                        (rule 30)

	';'            reduce using rule 30
	'else'         reduce using rule 30
	'end'          reduce using rule 30
	%eof           reduce using rule 30


State 28

	Statement -> WriteStatement .                       (rule 31)

	';'            reduce using rule 31
	'else'         reduce using rule 31
	'end'          reduce using rule 31
	%eof           reduce using rule 31


State 29

	CompoundStatement -> 'begin' . StatementList 'end'    (rule 45)

	'begin'        shift, and enter state 29
	'if'           shift, and enter state 30
	'read'         shift, and enter state 20
	'while'        shift, and enter state 31
	'write'        shift, and enter state 18
	L_Id           shift, and enter state 16

	Id             goto state 21
	Variable       goto state 22
	Statement      goto state 23
	ProcedureStatementgoto state 24
	CompoundStatementgoto state 25
	StatementList  goto state 69
	ReadStatement  goto state 27
	WriteStatement goto state 28

State 30

	Statement -> 'if' . Expression 'then' Statement 'else' Statement    (rule 27)
	Statement -> 'if' . Expression 'then' Statement     (rule 28)

	'('            shift, and enter state 40
	L_Id           shift, and enter state 16
	L_MyInteger    shift, and enter state 41

	Id             goto state 33
	MyInteger      goto state 34
	Variable       goto state 35
	Expression     goto state 68
	Term           goto state 37
	Factor         goto state 38

State 31

	Statement -> 'while' . Expression 'do' Statement    (rule 29)

	'('            shift, and enter state 40
	L_Id           shift, and enter state 16
	L_MyInteger    shift, and enter state 41

	Id             goto state 33
	MyInteger      goto state 34
	Variable       goto state 35
	Expression     goto state 67
	Term           goto state 37
	Factor         goto state 38

State 32

	%start_pCompoundStatement -> CompoundStatement .    (rule 11)

	%eof           accept


State 33

	Variable -> Id .                                    (rule 19)

	')'            reduce using rule 19
	'*'            reduce using rule 19
	'+'            reduce using rule 19
	','            reduce using rule 19
	'-'            reduce using rule 19
	'/'            reduce using rule 19
	';'            reduce using rule 19
	'do'           reduce using rule 19
	'else'         reduce using rule 19
	'end'          reduce using rule 19
	'then'         reduce using rule 19
	%eof           reduce using rule 19


State 34

	Factor -> MyInteger .                               (rule 38)

	')'            reduce using rule 38
	'*'            reduce using rule 38
	'+'            reduce using rule 38
	','            reduce using rule 38
	'-'            reduce using rule 38
	'/'            reduce using rule 38
	';'            reduce using rule 38
	'do'           reduce using rule 38
	'else'         reduce using rule 38
	'end'          reduce using rule 38
	'then'         reduce using rule 38
	%eof           reduce using rule 38


State 35

	Factor -> Variable .                                (rule 39)

	')'            reduce using rule 39
	'*'            reduce using rule 39
	'+'            reduce using rule 39
	','            reduce using rule 39
	'-'            reduce using rule 39
	'/'            reduce using rule 39
	';'            reduce using rule 39
	'do'           reduce using rule 39
	'else'         reduce using rule 39
	'end'          reduce using rule 39
	'then'         reduce using rule 39
	%eof           reduce using rule 39


State 36

	Expression -> Expression . '+' Term                 (rule 32)
	Expression -> Expression . '-' Term                 (rule 33)
	ExpressionList -> Expression .                      (rule 43)
	ExpressionList -> Expression . ',' ExpressionList    (rule 44)

	')'            reduce using rule 43
	'+'            shift, and enter state 60
	','            shift, and enter state 66
	'-'            shift, and enter state 61
	%eof           reduce using rule 43


State 37

	Expression -> Term .                                (rule 34)
	Term -> Term . '*' Factor                           (rule 35)
	Term -> Term . '/' Factor                           (rule 36)

	')'            reduce using rule 34
	'*'            shift, and enter state 62
	'+'            reduce using rule 34
	','            reduce using rule 34
	'-'            reduce using rule 34
	'/'            shift, and enter state 63
	';'            reduce using rule 34
	'do'           reduce using rule 34
	'else'         reduce using rule 34
	'end'          reduce using rule 34
	'then'         reduce using rule 34
	%eof           reduce using rule 34


State 38

	Term -> Factor .                                    (rule 37)

	')'            reduce using rule 37
	'*'            reduce using rule 37
	'+'            reduce using rule 37
	','            reduce using rule 37
	'-'            reduce using rule 37
	'/'            reduce using rule 37
	';'            reduce using rule 37
	'do'           reduce using rule 37
	'else'         reduce using rule 37
	'end'          reduce using rule 37
	'then'         reduce using rule 37
	%eof           reduce using rule 37


State 39

	%start_pExpressionList -> ExpressionList .          (rule 10)

	%eof           accept


State 40

	Factor -> '(' . Expression ')'                      (rule 40)

	'('            shift, and enter state 40
	L_Id           shift, and enter state 16
	L_MyInteger    shift, and enter state 41

	Id             goto state 33
	MyInteger      goto state 34
	Variable       goto state 35
	Expression     goto state 65
	Term           goto state 37
	Factor         goto state 38

State 41

	MyInteger -> L_MyInteger .                          (rule 16)

	')'            reduce using rule 16
	'*'            reduce using rule 16
	'+'            reduce using rule 16
	','            reduce using rule 16
	'-'            reduce using rule 16
	'/'            reduce using rule 16
	';'            reduce using rule 16
	']'            reduce using rule 16
	'do'           reduce using rule 16
	'else'         reduce using rule 16
	'end'          reduce using rule 16
	'then'         reduce using rule 16
	%eof           reduce using rule 16


State 42

	ProcedureStatement -> Id . '(' ')'                  (rule 41)
	ProcedureStatement -> Id . '(' ExpressionList ')'    (rule 42)

	'('            shift, and enter state 64


State 43

	%start_pProcedureStatement -> ProcedureStatement .    (rule 9)

	%eof           accept


State 44

	%start_pFactor -> Factor .                          (rule 8)

	%eof           accept


State 45

	%start_pTerm -> Term .                              (rule 7)
	Term -> Term . '*' Factor                           (rule 35)
	Term -> Term . '/' Factor                           (rule 36)

	'*'            shift, and enter state 62
	'/'            shift, and enter state 63
	%eof           accept


State 46

	%start_pExpression -> Expression .                  (rule 6)
	Expression -> Expression . '+' Term                 (rule 32)
	Expression -> Expression . '-' Term                 (rule 33)

	'+'            shift, and enter state 60
	'-'            shift, and enter state 61
	%eof           accept


State 47

	%start_pStatement -> Statement .                    (rule 5)

	%eof           accept


State 48

	%start_pStandardType -> StandardType .              (rule 4)

	%eof           accept


State 49

	StandardType -> 'integer' .                         (rule 23)

	%eof           reduce using rule 23


State 50

	%start_pType -> Type .                              (rule 3)

	%eof           accept


State 51

	Type -> StandardType .                              (rule 21)

	%eof           reduce using rule 21


State 52

	Type -> 'array' . '[' MyInteger ']'                 (rule 22)

	'['            shift, and enter state 59


State 53

	%start_pAssignOp -> AssignOp .                      (rule 2)

	%eof           accept


State 54

	AssignOp -> '=' .                                   (rule 20)

	'('            reduce using rule 20
	L_Id           reduce using rule 20
	L_MyInteger    reduce using rule 20
	%eof           reduce using rule 20


State 55

	%start_pVariable -> Variable .                      (rule 1)

	%eof           accept


State 56

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 57

	Program -> 'program' . Id CompoundStatement         (rule 18)

	L_Id           shift, and enter state 16

	Id             goto state 58

State 58

	Program -> 'program' Id . CompoundStatement         (rule 18)

	'begin'        shift, and enter state 29

	CompoundStatementgoto state 90

State 59

	Type -> 'array' '[' . MyInteger ']'                 (rule 22)

	L_MyInteger    shift, and enter state 41

	MyInteger      goto state 89

State 60

	Expression -> Expression '+' . Term                 (rule 32)

	'('            shift, and enter state 40
	L_Id           shift, and enter state 16
	L_MyInteger    shift, and enter state 41

	Id             goto state 33
	MyInteger      goto state 34
	Variable       goto state 35
	Term           goto state 88
	Factor         goto state 38

State 61

	Expression -> Expression '-' . Term                 (rule 33)

	'('            shift, and enter state 40
	L_Id           shift, and enter state 16
	L_MyInteger    shift, and enter state 41

	Id             goto state 33
	MyInteger      goto state 34
	Variable       goto state 35
	Term           goto state 87
	Factor         goto state 38

State 62

	Term -> Term '*' . Factor                           (rule 35)

	'('            shift, and enter state 40
	L_Id           shift, and enter state 16
	L_MyInteger    shift, and enter state 41

	Id             goto state 33
	MyInteger      goto state 34
	Variable       goto state 35
	Factor         goto state 86

State 63

	Term -> Term '/' . Factor                           (rule 36)

	'('            shift, and enter state 40
	L_Id           shift, and enter state 16
	L_MyInteger    shift, and enter state 41

	Id             goto state 33
	MyInteger      goto state 34
	Variable       goto state 35
	Factor         goto state 85

State 64

	ProcedureStatement -> Id '(' . ')'                  (rule 41)
	ProcedureStatement -> Id '(' . ExpressionList ')'    (rule 42)

	'('            shift, and enter state 40
	')'            shift, and enter state 84
	L_Id           shift, and enter state 16
	L_MyInteger    shift, and enter state 41

	Id             goto state 33
	MyInteger      goto state 34
	Variable       goto state 35
	Expression     goto state 36
	Term           goto state 37
	Factor         goto state 38
	ExpressionList goto state 83

State 65

	Expression -> Expression . '+' Term                 (rule 32)
	Expression -> Expression . '-' Term                 (rule 33)
	Factor -> '(' Expression . ')'                      (rule 40)

	')'            shift, and enter state 82
	'+'            shift, and enter state 60
	'-'            shift, and enter state 61


State 66

	ExpressionList -> Expression ',' . ExpressionList    (rule 44)

	'('            shift, and enter state 40
	L_Id           shift, and enter state 16
	L_MyInteger    shift, and enter state 41

	Id             goto state 33
	MyInteger      goto state 34
	Variable       goto state 35
	Expression     goto state 36
	Term           goto state 37
	Factor         goto state 38
	ExpressionList goto state 81

State 67

	Statement -> 'while' Expression . 'do' Statement    (rule 29)
	Expression -> Expression . '+' Term                 (rule 32)
	Expression -> Expression . '-' Term                 (rule 33)

	'+'            shift, and enter state 60
	'-'            shift, and enter state 61
	'do'           shift, and enter state 80


State 68

	Statement -> 'if' Expression . 'then' Statement 'else' Statement    (rule 27)
	Statement -> 'if' Expression . 'then' Statement     (rule 28)
	Expression -> Expression . '+' Term                 (rule 32)
	Expression -> Expression . '-' Term                 (rule 33)

	'+'            shift, and enter state 60
	'-'            shift, and enter state 61
	'then'         shift, and enter state 79


State 69

	CompoundStatement -> 'begin' StatementList . 'end'    (rule 45)

	'end'          shift, and enter state 78


State 70

	StatementList -> Statement ';' . StatementList      (rule 47)

	'begin'        shift, and enter state 29
	'if'           shift, and enter state 30
	'read'         shift, and enter state 20
	'while'        shift, and enter state 31
	'write'        shift, and enter state 18
	L_Id           shift, and enter state 16

	Id             goto state 21
	Variable       goto state 22
	Statement      goto state 23
	ProcedureStatementgoto state 24
	CompoundStatementgoto state 25
	StatementList  goto state 77
	ReadStatement  goto state 27
	WriteStatement goto state 28

State 71

	Statement -> Variable AssignOp . Expression         (rule 24)

	'('            shift, and enter state 40
	L_Id           shift, and enter state 16
	L_MyInteger    shift, and enter state 41

	Id             goto state 33
	MyInteger      goto state 34
	Variable       goto state 35
	Expression     goto state 76
	Term           goto state 37
	Factor         goto state 38

State 72

	ReadStatement -> 'read' '(' . Variable ')'          (rule 48)

	L_Id           shift, and enter state 16

	Id             goto state 33
	Variable       goto state 75

State 73

	WriteStatement -> 'write' '(' . Expression ')'      (rule 49)

	'('            shift, and enter state 40
	L_Id           shift, and enter state 16
	L_MyInteger    shift, and enter state 41

	Id             goto state 33
	MyInteger      goto state 34
	Variable       goto state 35
	Expression     goto state 74
	Term           goto state 37
	Factor         goto state 38

State 74

	Expression -> Expression . '+' Term                 (rule 32)
	Expression -> Expression . '-' Term                 (rule 33)
	WriteStatement -> 'write' '(' Expression . ')'      (rule 49)

	')'            shift, and enter state 96
	'+'            shift, and enter state 60
	'-'            shift, and enter state 61


State 75

	ReadStatement -> 'read' '(' Variable . ')'          (rule 48)

	')'            shift, and enter state 95


State 76

	Statement -> Variable AssignOp Expression .         (rule 24)
	Expression -> Expression . '+' Term                 (rule 32)
	Expression -> Expression . '-' Term                 (rule 33)

	'+'            shift, and enter state 60
	'-'            shift, and enter state 61
	';'            reduce using rule 24
	'else'         reduce using rule 24
	'end'          reduce using rule 24
	%eof           reduce using rule 24


State 77

	StatementList -> Statement ';' StatementList .      (rule 47)

	'end'          reduce using rule 47
	%eof           reduce using rule 47


State 78

	CompoundStatement -> 'begin' StatementList 'end' .    (rule 45)

	';'            reduce using rule 45
	'else'         reduce using rule 45
	'end'          reduce using rule 45
	%eof           reduce using rule 45


State 79

	Statement -> 'if' Expression 'then' . Statement 'else' Statement    (rule 27)
	Statement -> 'if' Expression 'then' . Statement     (rule 28)

	'begin'        shift, and enter state 29
	'if'           shift, and enter state 30
	'read'         shift, and enter state 20
	'while'        shift, and enter state 31
	'write'        shift, and enter state 18
	L_Id           shift, and enter state 16

	Id             goto state 21
	Variable       goto state 22
	Statement      goto state 94
	ProcedureStatementgoto state 24
	CompoundStatementgoto state 25
	ReadStatement  goto state 27
	WriteStatement goto state 28

State 80

	Statement -> 'while' Expression 'do' . Statement    (rule 29)

	'begin'        shift, and enter state 29
	'if'           shift, and enter state 30
	'read'         shift, and enter state 20
	'while'        shift, and enter state 31
	'write'        shift, and enter state 18
	L_Id           shift, and enter state 16

	Id             goto state 21
	Variable       goto state 22
	Statement      goto state 93
	ProcedureStatementgoto state 24
	CompoundStatementgoto state 25
	ReadStatement  goto state 27
	WriteStatement goto state 28

State 81

	ExpressionList -> Expression ',' ExpressionList .    (rule 44)

	')'            reduce using rule 44
	%eof           reduce using rule 44


State 82

	Factor -> '(' Expression ')' .                      (rule 40)

	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'/'            reduce using rule 40
	';'            reduce using rule 40
	'do'           reduce using rule 40
	'else'         reduce using rule 40
	'end'          reduce using rule 40
	'then'         reduce using rule 40
	%eof           reduce using rule 40


State 83

	ProcedureStatement -> Id '(' ExpressionList . ')'    (rule 42)

	')'            shift, and enter state 92


State 84

	ProcedureStatement -> Id '(' ')' .                  (rule 41)

	';'            reduce using rule 41
	'else'         reduce using rule 41
	'end'          reduce using rule 41
	%eof           reduce using rule 41


State 85

	Term -> Term '/' Factor .                           (rule 36)

	')'            reduce using rule 36
	'*'            reduce using rule 36
	'+'            reduce using rule 36
	','            reduce using rule 36
	'-'            reduce using rule 36
	'/'            reduce using rule 36
	';'            reduce using rule 36
	'do'           reduce using rule 36
	'else'         reduce using rule 36
	'end'          reduce using rule 36
	'then'         reduce using rule 36
	%eof           reduce using rule 36


State 86

	Term -> Term '*' Factor .                           (rule 35)

	')'            reduce using rule 35
	'*'            reduce using rule 35
	'+'            reduce using rule 35
	','            reduce using rule 35
	'-'            reduce using rule 35
	'/'            reduce using rule 35
	';'            reduce using rule 35
	'do'           reduce using rule 35
	'else'         reduce using rule 35
	'end'          reduce using rule 35
	'then'         reduce using rule 35
	%eof           reduce using rule 35


State 87

	Expression -> Expression '-' Term .                 (rule 33)
	Term -> Term . '*' Factor                           (rule 35)
	Term -> Term . '/' Factor                           (rule 36)

	')'            reduce using rule 33
	'*'            shift, and enter state 62
	'+'            reduce using rule 33
	','            reduce using rule 33
	'-'            reduce using rule 33
	'/'            shift, and enter state 63
	';'            reduce using rule 33
	'do'           reduce using rule 33
	'else'         reduce using rule 33
	'end'          reduce using rule 33
	'then'         reduce using rule 33
	%eof           reduce using rule 33


State 88
